assets/custom-theme.css
/* ... */
.swiper-cube .swiper-slide-shadow-top,
.swiper-cube .swiper-slide-shadow-bottom,
.swiper-cube .swiper-slide-shadow-left,
.swiper-cube .swiper-slide-shadow-right {
  z-index: 0;
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
}
.swiper-cube .swiper-cube-shadow {
  position: absolute;
  left: 0;
  bottom: 0px;
  width: 100%;
  height: 100%;
  opacity: 0.6;
  z-index: 0;
}
.swiper-cube .swiper-cube-shadow:before {
  content: "";
  background: #000;
  position: absolute;
  left: 0;
  top: 0;
  bottom: 0;
  right: 0;
  filter: blur(50px);
}
.swiper-flip {
  overflow: visible;
}
.swiper-flip .swiper-slide {
  pointer-events: none;
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  z-index: 1;
}
.swiper-flip .swiper-slide .swiper-slide {
  pointer-events: none;
}
.swiper-flip .swiper-slide-active,
.swiper-flip .swiper-slide-active .swiper-slide-active {
  pointer-events: auto;
}
.swiper-flip .swiper-slide-shadow-top,
.swiper-flip .swiper-slide-shadow-bottom,
.swiper-flip .swiper-slide-shadow-left,
.swiper-flip .swiper-slide-shadow-right {
  z-index: 0;
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
}
.swiper-creative .swiper-slide {
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  overflow: hidden;
  transition-property:
    transform,
    opacity,
    height;
}
.swiper-cards {
  overflow: visible;
}
.swiper-cards .swiper-slide {
  transform-origin: center bottom;
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  overflow: hidden;
}

/* styles/custom-theme.scss */
@media screen and (max-width: 640px) {
  .hidden-phone {
    display: none !important;
  }
}
@media screen and (max-width: 640px) {
  .hidden-phone {
    display: none !important;
  }
}
@media screen and (min-width: 641px) and (max-width: 1007px) {
  .hidden-tablet {
    display: none !important;
  }
}
@media screen and (min-width: 641px) {
  .hidden-tablet-and-up {
    display: none !important;
  }
}
@media screen and (max-width: 1008px) {
  .hidden-pocket {
    display: none !important;
  }
}
@media screen and (max-width: 768px) {
  .hidden-pocket2 {
    display: none !important;
  }
}
@media screen and (min-width: 769px) {
  .hidden-pocket2-and-up {
    display: none !important;
  }
}
@media screen and (min-width: 1008px) and (max-width: 1239px) {
  .hidden-lap {
    display: none !important;
  }
}
@media screen and (min-width: 1008px) {
  .hidden-lap-and-up {
    display: none !important;
  }
}
@media screen and (min-width: 1240px) {
  .hidden-desk {
    display: none !important;
  }
}
@media screen and (min-width: 1500px) {
  .hidden-widescreen {
    display: none !important;
  }
}
.spr-header-title,
.related_articles_header h5,
.related_products_header h5,
.jdgm-carousel-title {
  font-family: var(---font-stack-heading);
  font-weight: var(---font-weight-heading);
  font-style: var(---font-style-heading);
  text-transform: var(---font-heading-caps);
  letter-spacing: var(---font-heading-space);
  font-size: calc(17.14426px * var(---font-adjust-heading));
  color: var(--text);
  text-align: center;
  padding-bottom: var(--inner);
  margin-bottom: var(--gutter);
  position: relative;
}
.product__title__wrapper .product__title {
  font-family: var(---font-stack-product-heading);
  font-weight: var(---font-weight-product-heading);
  font-style: var(---font-style-product-heading);
  text-transform: var(---font-product-heading-caps);
  letter-spacing: var(---font-product-heading-space);
  font-size: calc(17.14426px * var(---font-adjust-product-heading));
}
.spr-header-title,
.related_articles_header h5,
.related_products_header h5,
.jdgm-carousel-title,
.jdgm-carousel-title.strong,
.jdgm-carousel-title .strong {
  font-weight: var(---font-weight-accent-bold);
}
.spr-header-title::after,
.related_articles_header h5::after,
.related_products_header h5::after,
.jdgm-carousel-title:after {
  content: "";
  margin: auto;
  width: 30px;
  height: 3px;
  position: absolute;
  bottom: 0;
  background: var(--text-dark);
  opacity: 0.2;
  left: 0;
  right: 0;
}
.align--middle-left .jdgm-carousel-title:after {
  right: unset;
}
.align--middle-right .jdgm-carousel-title:after {
  left: unset;
}
.palette--dark .jdgm-carousel-title:after {
  background: #fff;
}
.pb-text-title-header,
.cross-post-blogs .article-title {
  font-family: var(---font-stack-body);
  font-size: calc(17.14426px * var(---font-adjust-body));
}
.pb-text-excerpt {
  display: none;
}
.announcement__text,
.announcement__text p {
  text-transform: var(---announcement-text-caps);
}
.header__dropdown__inner > .navlink.navlink--child.no-grandchild .navtext {
  text-transform: var(---nested-menu-caps) !important;
}
.header__dropdown__inner .dropdown__family .navlink.navlink--child.has-grandchild .navtext {
  text-transform: uppercase;
  font-weight: bold;
}
.header__dropdown__inner .dropdown__family .navlink.navlink--grandchild .navtext {
  text-transform: var(---nested-menu-caps);
}
.sidebar__item a {
  text-transform: var(---sidebar-item-caps);
}
.btn--readmore,
.btn--outline {
  border: 1px solid var(---btn-border-color);
  background-color: var(---btn-bg-color);
  color: var(---btn-text-color);
  transition: all 0.25s ease-in-out;
  font-size: calc(12px * var(---font-adjust-accent));
}
.btn--readmore:hover,
.btn--outline:hover {
  border: 1px solid var(---btn-hover-border-color);
  background-color: var(---btn-hover-bg-color);
  color: var(---btn-hover-text-color);
}
.header__desktop {
  height: 70px;
}
.header__logo__link {
  width: var(--main-header-logo-width);
}
.header__desktop__bar__inline .tousled-logo {
  height: auto;
}
.header__desktop__bar__inline .navtext.tousled {
  position: absolute;
  left: -99999px;
}
.sliderule__wrapper .tousled-logo {
  position: absolute;
  padding-left: 20px;
  padding-right: 34px;
  height: auto;
  display: flex;
  align-items: center;
}
.points-box {
  display: flex;
}
/* ... */

